<?xml version="1.0" encoding="UTF-8"?>

<project
  xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.dellroad</groupId>
        <artifactId>dellroad-dependencies</artifactId>
        <version>3.1.4.0</version>
    </parent>
    <groupId>org.dellroad</groupId>
    <artifactId>dellroad-stuff</artifactId>
    <name>DellRoad Stuff</name>
    <version>3.0.0</version>
    <packaging>pom</packaging>
    <description>DellRoad Stuff is a dumping ground for various useful Java classes that have evolved over time from repeated use in multiple projects.</description>
    <url>https://github.com/archiecobbs/dellroad-stuff</url>
    <modules>
        <module>jibx</module>
        <module>main</module>
        <module>maven-plugin</module>
        <module>pobj</module>
        <module>spring</module>
        <module>test</module>
        <module>vaadin</module>
    </modules>
    <licenses>
        <license>
            <name>The Apache Software License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>
    <issueManagement>
        <system>GitHub Issues</system>
        <url>https://github.com/archiecobbs/dellroad-stuff/issues</url>
    </issueManagement>
    <scm>
        <url>https://github.com/archiecobbs/dellroad-stuff/</url>
        <connection>scm:git:git://github.com/archiecobbs/dellroad-stuff.git</connection>
        <developerConnection>scm:git:git://github.com/archiecobbs/dellroad-stuff.git</developerConnection>
    </scm>
    <developers>
        <developer>
            <id>archie</id>
            <name>Archie Cobbs</name>
            <email>archie.cobbs@gmail.com</email>
        </developer>
    </developers>
    <properties>

        <!-- Basic stuff -->
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <checkstyle.config.location>src/main/checkstyle/checkstyle.xml</checkstyle.config.location>
        <java.version>17</java.version>

        <!-- Dependency versions -->
        <testng.version>7.7.0</testng.version>

    </properties>
    <dependencies>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-reload4j</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.testng</groupId>
            <artifactId>testng</artifactId>
            <version>${testng.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>
    <distributionManagement>
        <downloadUrl>https://github.com/archiecobbs/dellroad-stuff</downloadUrl>
        <site>
            <id>${project.artifactId}-site</id>
            <url>file://${project.basedir}/site/</url>
        </site>
    </distributionManagement>
    <build>
        <plugins>

            <!-- Maven Enforcer -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
                <executions>
                    <execution>
                        <id>enforce-java</id>
                        <goals>
                            <goal>enforce</goal>
                        </goals>
                        <configuration>
                            <rules>

                                <!-- Enforce Java version -->
                                <requireJavaVersion>
                                    <version>[17,)</version>
                                </requireJavaVersion>

                                <!-- Check for dependency conflicts -->
                                <!-- <dependencyConvergence/> -->
                                <banDuplicatePomDependencyVersions/>

                                <!-- Other rules -->
                                <reactorModuleConvergence/>
                                <!-- <requireUpperBoundDeps/> -->

                            </rules>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <!-- JAR -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <configuration>
                    <archive>
                        <manifestEntries>
                            <Automatic-Module-Name>${auto.module.name}</Automatic-Module-Name>
                        </manifestEntries>
                    </archive>
                </configuration>
            </plugin>

            <!-- Compile -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <release>${java.version}</release>
                    <showWarnings>true</showWarnings>
                    <compilerArgs>
                        <arg>-Xlint:all,-processing,-path</arg>
                        <arg>-Werror</arg>
                    </compilerArgs>
                </configuration>
            </plugin>

            <!-- Sources -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <!-- Javadoc -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <configuration>
                    <source>${javadoc.target}</source>
                    <notimestamp>true</notimestamp>
                    <doclint>-reference</doclint>
                    <additionalJOption>--allow-script-in-comments</additionalJOption>
                    <validateLinks>true</validateLinks>
                    <additionalJOptions>
                        <additionalJOption>-Xmaxwarns</additionalJOption>
                        <additionalJOption>65536</additionalJOption>
                    </additionalJOptions>
                    <links combine.children="append">
                        <link>https://docs.spring.io/spring/docs/${spring-framework.version}/javadoc-api/</link>
                        <link>https://guava.dev/releases/${guava.version}/api/docs/</link>
                        <link>http://jibx.sourceforge.net/api/</link>
                        <link>https://www.slf4j.org/apidocs/</link>
                        <link>https://www.eclipse.org/aspectj/doc/released/runtime-api/</link>
                        <link>https://maven.apache.org/ref/${plugin-api.version}/apidocs/</link>
                    </links>
                </configuration>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <!-- Tests -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <argLine>--add-opens=java.base/java.text=ALL-UNNAMED</argLine>
                    <systemPropertyVariables>
                        <deleteTempDirs>true</deleteTempDirs>
                        <randomSeed/>
                    </systemPropertyVariables>
                    <properties>
                        <property>
                            <name>surefire.testng.verbose</name>
                            <value>10</value>
                        </property>
                    </properties>
                </configuration>
            </plugin>

            <!-- Checkstyle -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-checkstyle-plugin</artifactId>
                <executions>
                    <execution>
                        <id>default-verify</id>
                        <phase>verify</phase>
                        <configuration>
                            <encoding>UTF-8</encoding>
                            <consoleOutput>true</consoleOutput>
                            <failsOnError>true</failsOnError>
                            <linkXRef>false</linkXRef>
                            <sourceDirectories>
                                <sourceDirectory>${project.build.sourceDirectory}</sourceDirectory>
                            </sourceDirectories>
                            <excludes>org/dellroad/stuff/jibx/JibxMarshaller.java</excludes>
                        </configuration>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <!-- SpotBugs -->
            <plugin>
                <groupId>com.github.spotbugs</groupId>
                <artifactId>spotbugs-maven-plugin</artifactId>
                <configuration>
                    <effort>Max</effort>
                    <threshold>Default</threshold>
                    <xmlOutput>true</xmlOutput>
                    <excludeFilterFile>src/spotbugs/spotbugs-exclude.xml</excludeFilterFile>
                    <failOnError>true</failOnError>
                </configuration>
                <executions>
                    <execution>
                        <phase>verify</phase>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <!-- Site and Info Reports -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-project-info-reports-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-site-plugin</artifactId>
            </plugin>

            <!-- Avoid Mac OS X "Launcher" application appearing during build -->
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>properties-maven-plugin</artifactId>
                <executions>
                    <execution>
                        <goals>
                            <goal>set-system-properties</goal>
                        </goals>
                        <configuration>
                            <properties>
                                <property>
                                    <name>java.awt.headless</name>
                                    <value>true</value>
                                </property>
                            </properties>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>
        <extensions>
            <extension>
                <groupId>org.apache.maven.wagon</groupId>
                <artifactId>wagon-scm</artifactId>
                <version>${maven-wagon-scm-extension.version}</version>
            </extension>
        </extensions>
    </build>
    <reporting>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <inherited>false</inherited>
                <configuration>
                    <source>${javadoc.target}</source>
                    <notimestamp>true</notimestamp>
                    <doclint>-html</doclint><!-- to allow <video> tags -->
                    <additionalJOption>--allow-script-in-comments</additionalJOption>
                    <validateLinks>true</validateLinks>
                    <aggregate>true</aggregate>
                    <inherited>false</inherited>
                    <links>
                        <link>https://docs.spring.io/spring/docs/${spring-framework.version}/javadoc-api/</link>
                        <link>https://guava.dev/releases/${guava.version}/api/docs/</link>
                        <link>http://jibx.sourceforge.net/api/</link>
                        <link>https://www.slf4j.org/apidocs/</link>
                        <link>https://www.eclipse.org/aspectj/doc/released/runtime-api/</link>
                        <link>https://maven.apache.org/ref/${plugin-api.version}/apidocs/</link>
                    </links>
                    <excludePackageNames>org.dellroad.stuff.vaadin7;org.dellroad.stuff.pobj.vaadin7</excludePackageNames>
                    <offlineLinks>
                        <offlineLink>
                            <url>https://vaadin.com/api/platform/${vaadin24.version}</url>
                            <location>${project.basedir}/vaadin/vaadin24/src/javadoc/vaadin</location>
                        </offlineLink>
                    </offlineLinks>
                </configuration>
                <reportSets>
                    <reportSet>
                        <id>aggregate</id>
                        <inherited>false</inherited>
                        <reports>
                            <report>aggregate</report>
                        </reports>
                    </reportSet>
                </reportSets>
            </plugin>
        </plugins>
    </reporting>
    <profiles>

        <!-- Maven Central requires signed artifacts -->
        <profile>
            <id>sign</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-gpg-plugin</artifactId>
                        <executions>
                            <execution>
                                <id>sign-artifacts</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>
